DES-79 fix layout issues in the minute template for tablet

--- a/ArticleTemplates/assets/scss/style-sync.css
+++ b/ArticleTemplates/assets/scss/style-sync.css
@@ -3881,6 +3881,8 @@ body.the-minute.advert-config--tablet {
           margin-bottom: 0; }
         body.the-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-video .block__body .from-content-api p:first-child {
           margin-top: 12px; }
+        body.the-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-video .block__body .from-content-api h2 + p {
+          margin-top: 0; }
         body.the-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-video .block__body .from-content-api figure {
           left: 5%; }
           body.the-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-video .block__body .from-content-api figure::before {
@@ -3894,6 +3896,15 @@ body.the-minute.advert-config--tablet {
             margin-left: 75%; }
           body.the-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-video .block__body .from-content-api figure .video-URL {
             background: #005689; }
+          body.the-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-video .block__body .from-content-api figure figcaption {
+            padding-bottom: 0;
+            margin-bottom: 0;
+            border: none;
+            font: 1.4rem/1.7rem "Guardian Agate Sans 1 Web", sans-serif;
+            color: rgba(255, 255, 255, 0.9);
+            width: 80%; }
+            body.the-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-video .block__body .from-content-api figure figcaption span {
+              display: inline; }
         body.the-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-thumbnail .block__body .from-content-api {
           -webkit-justify-content: flex-start;
           justify-content: flex-start; }
@@ -4027,6 +4038,7 @@ body.the-minute.advert-config--tablet {
           body.the-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-textonly.has-tweet .block__body .from-content-api::before {
             width: 120%;
             margin-left: -10%; }
+          body.the-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-textonly.has-tweet .block__body .from-content-api > p,
           body.the-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-textonly.has-tweet .block__body .from-content-api h2 {
             padding-left: 8px; }
           body.the-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-textonly.has-tweet .block__body .from-content-api .twitter-tweet {
@@ -4182,6 +4194,8 @@ body.the-euro-minute.advert-config--tablet .article--liveblog .article__body--li
       background-color: #4BC6DF; }
     body.the-euro-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-video .block__body .from-content-api figure .video-URL {
       background: #005689; }
+    body.the-euro-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-video .block__body .from-content-api figure figcaption {
+      color: rgba(255, 255, 255, 0.9); }
     body.the-euro-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-thumbnail .block__body .from-content-api h2,
     body.the-euro-minute.advert-config--tablet .article--liveblog .article__body--liveblog .block.is-thumbnail .block__body .from-content-api p {
       color: #fff; }
